upgrade to django2, made app urls start at root, fixed comment styles

--- a/poker/static/poker/style.css
+++ b/poker/static/poker/style.css
@@ -7,5 +7,15 @@ h1 {
 }
 
 body {
-    background: white url("images/background.jpg") no-repeat;
+    background: white url("images/background.jpg");
+    background-size: 100%;
+}
+
+.center-panel {
+    background: #eeeeee;
+    height: 100%;
+}
+
+input[type='range'] {
+    margin-bottom: 1em;
 }
