--- a/poker/static/poker/style.scss
+++ b/poker/static/poker/style.scss
@@ -9,6 +9,8 @@ h1 {
 body {
     background: white url("images/background.jpg");
     background-size: 100%;
+
+    height: 100%;
 }
 
 .center-panel {
