--- a/poker/templates/poker/index.html
+++ b/poker/templates/poker/index.html
@@ -1,10 +1,14 @@
 {% load staticfiles %}
+{% load compress %}
 
 <html>
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
-        <link rel="stylesheet" href="{% static 'poker/style.css' %}">
+
+        {% compress css %}
+        <link rel="stylesheet" href="{% static 'poker/style.scss' %}">
+        {% endcompress %}
     </head>
     <body>
         <h1>{{ title }}</h1>
