--- a/poker/templates/poker/prizeDist.html
+++ b/poker/templates/poker/prizeDist.html
@@ -1,10 +1,15 @@
 {% load staticfiles %}
+{% load compress %}
 
 <html>
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
-        <link rel="stylesheet" href="{% static 'poker/style.css' %}">
+        
+        {% compress css %}
+        <link rel="stylesheet" href="{% static 'poker/style.scss' %}">
+        {% endcompress %}
+        
         <script type="text/javascript">
             function updateTextVal(elName, val) {
                 document.getElementById(elName.concat('_textInput')).value = val;
